--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -21,7 +21,24 @@ body {
   font-family: "Source Sans Pro", "sans-serif";
 }
 
+nav {
+  display: flex;
+  justify-content: space-between;
+  height: 120px;
+  width: 100vw;
+  background-color: #4056A1;
+}
 
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
+
+ .container {
+   width: 90%;
+   margin: 10px auto;
+   border: solid #000000 1px;
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   justify-content: space;
+ }
