--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -13,7 +13,7 @@ nav {
 }
 
 nav > span {
-  font-family: "Bungee";
+  font-family: "Bungee", "sans-serif";
   font-size: 2em;
   margin-left: 1.5em;
 }
