--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -2,14 +2,12 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  position: fixed;
+  top: 0;
   height: 120px;
   width: 100vw;
   background-color: #4056A1;
   color: #FFFFFF;
-  position: absolute;
-  left: 0px;
-  top: 0px;
-  z-index: 1;
 }
 
 nav > span {
