Swap fa element for avatar icon for an img element
made the appropriate css changes to tweet.css
removed static tweet content form index.html

--- a/public/styles/tweet.css
+++ b/public/styles/tweet.css
@@ -28,8 +28,7 @@ article.tweet div.avatar {
   margin-left: 20px;
 }
 
-article.tweet i.fa-user{
-  font-size: 1.5em;
+article.tweet img{
   margin-right: 10px;
 }
 
