--- a/public/styles/tweet.css
+++ b/public/styles/tweet.css
@@ -45,6 +45,7 @@ article.tweet p.tweet-text {
   width: 98%;
   padding-left: 20px;
   font-size: 1.25em;
+  word-wrap: wrap;
 }
 
 article.tweet footer {
